# FractalGen

./: README.md  pyproject.toml
examples/: barnsley_example.py  julia_example.py  koch_example.py  lsystem_example.py  madelbrot_example.py  sierpinski_example.py
fractalgen/: mandelbrot.py
fractalplots/: __init__.py  barnsley.py
tests/: test_barnsley.py  test_mandelbrot.py
